--- a/src/main/java/org/harunjaganjac/example/ui/Dashboard.form
+++ b/src/main/java/org/harunjaganjac/example/ui/Dashboard.form
@@ -7,7 +7,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="2919d" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2919d" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Before"/>
         <properties/>
@@ -21,40 +21,60 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-8388480"/>
+              <foreground color="-8388480"/>
               <icon value="logo/HR.png"/>
               <text value=""/>
             </properties>
           </component>
           <component id="bdf4e" class="javax.swing.JButton" binding="projectsNav">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
               <text value="Projects"/>
             </properties>
           </component>
           <component id="f3e05" class="javax.swing.JButton" binding="employeesNav">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
               <text value="Employees"/>
             </properties>
           </component>
           <component id="4a9bd" class="javax.swing.JButton" binding="usersNav">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
               <text value="Users"/>
             </properties>
           </component>
           <component id="9e1a4" class="javax.swing.JButton" binding="applicationGuide">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
               <text value="Guide"/>
+            </properties>
+          </component>
+          <component id="7a717" class="javax.swing.JLabel" binding="moduleName">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -70,6 +90,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
               <text value="LoggedUser"/>
             </properties>
           </component>
@@ -78,6 +100,8 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
               <text value="Reset Password"/>
             </properties>
           </component>
@@ -86,6 +110,8 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
               <text value="Role"/>
             </properties>
           </component>
@@ -94,7 +120,10 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="LogOut"/>
+              <background color="-1"/>
+              <foreground color="-8388480"/>
+              <hideActionText value="false"/>
+              <text value="Log Out"/>
             </properties>
           </component>
         </children>
@@ -110,6 +139,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-8388480"/>
               <text value="@Created by Harun 2025"/>
             </properties>
           </component>
@@ -127,6 +157,7 @@
             </constraints>
             <properties>
               <font size="24"/>
+              <foreground color="-8388480"/>
               <text value="WELCOME TO DASHBOARD"/>
             </properties>
           </component>
