--- a/src/main/java/org/harunjaganjac/example/ui/EmployeeAddEdit.form
+++ b/src/main/java/org/harunjaganjac/example/ui/EmployeeAddEdit.form
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.harunjaganjac.example.ui.ResetPassword">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.harunjaganjac.example.ui.EmployeeAddEdit">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties>
-      <background color="-1"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
-      <grid id="5bff2" layout-manager="FormLayout">
+      <component id="39476" class="javax.swing.JLabel" binding="titleHeader">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Palatino Linotype" size="20" style="1"/>
+          <foreground color="-8388480"/>
+          <text value="TEST"/>
+        </properties>
+      </component>
+      <grid id="54ece" layout-manager="FormLayout">
         <rowspec value="center:d:grow"/>
         <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
@@ -18,45 +26,35 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <background color="-1"/>
-        </properties>
-        <border type="line"/>
+        <properties/>
+        <border type="none"/>
         <children>
-          <grid id="d3015" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="5264c" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <forms/>
             </constraints>
-            <properties>
-              <background color="-8388480"/>
-            </properties>
-            <border type="line">
-              <font name="Courier New" size="10" style="1"/>
-              <color color="-8388480"/>
-            </border>
+            <properties/>
+            <border type="none"/>
             <children>
-              <component id="17091" class="javax.swing.JLabel">
+              <component id="cd9b3" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-7578772"/>
-                  <foreground color="-1"/>
-                  <text value="New Password"/>
+                  <text value="First Name"/>
                 </properties>
               </component>
-              <component id="fce18" class="javax.swing.JLabel">
+              <component id="7c29" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <foreground color="-1"/>
-                  <text value="Old Password"/>
+                  <text value="Last Name"/>
                 </properties>
               </component>
-              <component id="8a494" class="javax.swing.JTextField" binding="newPassword">
+              <component id="ec6c0" class="javax.swing.JTextField" binding="usernameField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -64,7 +62,44 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="dcfea" class="javax.swing.JTextField" binding="oldPassword">
+              <component id="9da0e" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Position"/>
+                </properties>
+              </component>
+              <component id="b569" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Salary"/>
+                </properties>
+              </component>
+              <component id="31c6d" class="javax.swing.JLabel" binding="assignProjects">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Assign Projects"/>
+                </properties>
+              </component>
+              <scrollpane id="7f332">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="d1d0f" class="javax.swing.JList" binding="projectsList">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+              <component id="2823a" class="javax.swing.JTextField" binding="lastName">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -72,9 +107,25 @@
                 </constraints>
                 <properties/>
               </component>
+              <component id="4101c" class="javax.swing.JComboBox" binding="position">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="541c4" class="javax.swing.JTextField" binding="salary">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <enabled value="false"/>
+                </properties>
+              </component>
             </children>
           </grid>
-          <grid id="ca54f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="dca5c" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -83,43 +134,41 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="4204b" layout-manager="GridBagLayout">
+              <grid id="99fe6" layout-manager="GridBagLayout">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <background color="-8388480"/>
-                </properties>
+                <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="bc615" class="javax.swing.JButton" binding="cancelButton">
+                  <component id="5aa03" class="javax.swing.JButton" binding="createEmployee">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
-                      <text value="Cancel"/>
+                      <text value="Create Employee"/>
                     </properties>
                   </component>
-                  <hspacer id="bed2b">
+                  <hspacer id="a7728">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                   </hspacer>
-                  <vspacer id="da384">
+                  <vspacer id="2ef64">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                   </vspacer>
-                  <component id="41057" class="javax.swing.JButton" binding="changeButton">
+                  <component id="82494" class="javax.swing.JButton" binding="returnToLogin">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
-                      <text value="Change"/>
+                      <text value="Cancel"/>
                     </properties>
                   </component>
                 </children>
@@ -128,17 +177,6 @@
           </grid>
         </children>
       </grid>
-      <component id="fbb99" class="javax.swing.JLabel" binding="title">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-1"/>
-          <font name="Palatino Linotype" size="20" style="1"/>
-          <foreground color="-8388480"/>
-          <text value="CHANGE PASSWORD"/>
-        </properties>
-      </component>
     </children>
   </grid>
 </form>
