--- a/src/main/java/org/harunjaganjac/example/ui/ProjectAddEdit.form
+++ b/src/main/java/org/harunjaganjac/example/ui/ProjectAddEdit.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.harunjaganjac.example.ui.UserCreator">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.harunjaganjac.example.ui.ProjectAddEdit">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -8,17 +8,17 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="aa7aa" class="javax.swing.JLabel" binding="titleHeader" custom-create="true">
+      <component id="252b5" class="javax.swing.JLabel" binding="titleHeader">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Palatino Linotype" size="20" style="1"/>
           <foreground color="-8388480"/>
-          <text value="REGISTER"/>
+          <text value="TEST"/>
         </properties>
       </component>
-      <grid id="b6443" layout-manager="FormLayout">
+      <grid id="cbfcc" layout-manager="FormLayout">
         <rowspec value="center:d:grow"/>
         <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
@@ -29,7 +29,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="144e4" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="4b2e5" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -38,23 +38,23 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="188c9" class="javax.swing.JLabel">
+              <component id="e609a" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Username"/>
+                  <text value="Name"/>
                 </properties>
               </component>
-              <component id="28cfe" class="javax.swing.JLabel">
+              <component id="e3e0" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Password"/>
+                  <text value="Description"/>
                 </properties>
               </component>
-              <component id="5749d" class="javax.swing.JTextField" binding="usernameField">
+              <component id="e184f" class="javax.swing.JTextField" binding="usernameField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -62,63 +62,66 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="52bb4" class="javax.swing.JLabel">
+              <component id="d1637" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Confirm paswword"/>
+                  <text value="Start Date"/>
                 </properties>
               </component>
-              <component id="255c7" class="javax.swing.JLabel">
+              <component id="d7513" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Email"/>
+                  <text value="End Date"/>
                 </properties>
               </component>
-              <component id="522f8" class="javax.swing.JTextField" binding="passwordField">
+              <component id="b4c5f" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
                 <properties/>
               </component>
-              <component id="cca74" class="javax.swing.JTextField" binding="confirmPasswordField">
+              <component id="1d6ef" class="javax.swing.JSpinner" binding="endDate">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
-              <component id="c6350" class="javax.swing.JTextField" binding="emailField">
+              <component id="134ac" class="javax.swing.JSpinner" binding="startDate">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
-              <component id="5c483" class="javax.swing.JComboBox" binding="roleList">
-                <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="d3410" class="javax.swing.JLabel" binding="roleTitle">
+              <component id="985f1" class="javax.swing.JLabel" binding="employees">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Role"/>
+                  <text value="Assign Employees"/>
                 </properties>
               </component>
+              <scrollpane id="79d9c">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="81244" class="javax.swing.JList" binding="employeesList">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
             </children>
           </grid>
-          <grid id="31402" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="c6017" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -127,35 +130,35 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="918cd" layout-manager="GridBagLayout">
+              <grid id="403ae" layout-manager="GridBagLayout">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="7c6c2" class="javax.swing.JButton" binding="createUser">
+                  <component id="ee29e" class="javax.swing.JButton" binding="createProject">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
-                      <text value="Register"/>
+                      <text value="Create Project"/>
                     </properties>
                   </component>
-                  <hspacer id="71b12">
+                  <hspacer id="c4d72">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                   </hspacer>
-                  <vspacer id="631cb">
+                  <vspacer id="3f790">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                   </vspacer>
-                  <component id="7b093" class="javax.swing.JButton" binding="returnToLogin">
+                  <component id="87514" class="javax.swing.JButton" binding="returnToLogin">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
