--- a/src/main/java/org/harunjaganjac/example/ui/Register.form
+++ b/src/main/java/org/harunjaganjac/example/ui/Register.form
@@ -13,7 +13,9 @@
     <clientProperties>
       <html.disable class="java.lang.Boolean" value="false"/>
     </clientProperties>
-    <border type="none"/>
+    <border type="empty">
+      <size top="2" left="2" bottom="2" right="2"/>
+    </border>
     <children>
       <vspacer id="bc55f">
         <constraints>
@@ -21,6 +23,8 @@
         </constraints>
       </vspacer>
       <grid id="b3a3c" layout-manager="FormLayout">
+        <rowspec value="center:max(d;4px):noGrow"/>
+        <rowspec value="top:4dlu:noGrow"/>
         <rowspec value="center:d:grow"/>
         <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
@@ -36,7 +40,7 @@
           <grid id="38365" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <forms/>
             </constraints>
             <properties>
@@ -53,7 +57,9 @@
                 </constraints>
                 <properties>
                   <background color="-7578772"/>
+                  <font name="JetBrains Mono ExtraBold" size="12" style="1"/>
                   <foreground color="-1"/>
+                  <labelFor value="7c5b5"/>
                   <text value="Username"/>
                 </properties>
               </component>
@@ -62,7 +68,9 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="JetBrains Mono ExtraBold" size="12" style="1"/>
                   <foreground color="-1"/>
+                  <labelFor value="96a02"/>
                   <text value="Password"/>
                 </properties>
               </component>
@@ -71,7 +79,24 @@
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1"/>
+                  <foreground color="-8388480"/>
+                  <hideActionText value="false"/>
                   <text value=""/>
+                </properties>
+              </component>
+              <component id="96a02" class="javax.swing.JPasswordField" binding="passwordField">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <background color="-1"/>
+                  <font name="Impact" size="14"/>
+                  <foreground color="-8388480"/>
+                  <horizontalAlignment value="2"/>
+                  <toolTipText value="password"/>
                 </properties>
               </component>
               <component id="7c5b5" class="javax.swing.JTextField" binding="usernameField">
@@ -80,22 +105,19 @@
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
-              </component>
-              <component id="96a02" class="javax.swing.JPasswordField" binding="passwordField">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
+                <properties>
+                  <background color="-1"/>
+                  <font name="Impact" size="14"/>
+                  <foreground color="-8388480"/>
+                  <toolTipText value="username"/>
+                </properties>
               </component>
             </children>
           </grid>
           <grid id="5b728" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <forms/>
             </constraints>
             <properties/>
@@ -105,7 +127,9 @@
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-8388480"/>
+                </properties>
                 <border type="none"/>
                 <children>
                   <component id="b05df" class="javax.swing.JButton" binding="loginButton" default-binding="true">
@@ -114,27 +138,20 @@
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
+                      <background color="-1"/>
+                      <foreground color="-8388480"/>
+                      <hideActionText value="true"/>
                       <text value="Login"/>
                     </properties>
                   </component>
-                  <hspacer id="7eca2">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </hspacer>
-                  <vspacer id="9cc72">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
                   <component id="1d06d" class="javax.swing.JButton" binding="registerButton" default-binding="true">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
+                      <background color="-1"/>
+                      <foreground color="-8388480"/>
                       <text value="Register"/>
                     </properties>
                   </component>
@@ -142,15 +159,25 @@
               </grid>
             </children>
           </grid>
+          <component id="27a2e" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <forms defaultalign-horz="false"/>
+            </constraints>
+            <properties>
+              <icon value="logo/HR.png"/>
+              <text value=""/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="43b45" class="javax.swing.JLabel" binding="titleHeader" custom-create="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-1"/>
-          <font name="Consolas" size="24" style="1"/>
+          <font name="Palatino Linotype" size="20" style="1"/>
           <foreground color="-1"/>
           <text value="WELCOME TO HR MANAGER"/>
         </properties>
